--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,37 @@
+<div class="container">
+  <div>
+    <div class="container">
+      <h1 class="container">
+          Welcome!
+      </h1>
+  </div>
+  <div class="container">
+    <h2 class="container">
+        Please Log In to access the blogs
+    </h2>
+</div>
+<div class="container">
 <mat-form-field class="example-full-width">
     <mat-label>Email</mat-label>
     <input matInput placeholder="Email" value="">
   </mat-form-field>
-<br>
+</div>
+<div class="container"> 
   <mat-form-field class="example-full-width">
     <mat-label>Password</mat-label>
     <input matInput placeholder="Password" value="">
   </mat-form-field>
+  </div>
+  <div class="container">
+    <!-- <button mat-stroked-button type="submit">Log In</button> -->
+    <a mat-raised-button href="/task-list">Log In</a>
+</div>
+<div>
+    <br>
+</div>
+<P class="container">
+    Don't Have an account?  <a href="/signup">  SignUp</a> here
+</P>
+  </div>
+</div>
+
