SignUp page created

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,14 +1,35 @@
+<div class="container">
+    <div>
+        <div class="container">
+            <h2 class="container">
+                Don't have an account?
+                <br>
+                Sign Up here!
+            </h2>
+        </div>
+    <div class="container">
 <mat-form-field class="example-full-width">
     <mat-label>Email</mat-label>
     <input matInput placeholder="Email" value="">
   </mat-form-field>
-<br>
+    </div>
+    <div class="container">
   <mat-form-field class="example-full-width">
     <mat-label>Password</mat-label>
     <input matInput placeholder="Password" value="">
   </mat-form-field>
-  <br>
+    </div>
+    <div class="container">
   <mat-form-field class="example-full-width">
     <mat-label>Confirm Password</mat-label>
     <input matInput placeholder="Password" value="">
   </mat-form-field>
+    </div>
+    <div class="container">
+        <!-- <button mat-stroked-button type="submit">Log In</button> -->
+        <a mat-raised-button href="/task-list">Sign Up</a>
+    </div>
+    
+    </div>
+</div>
+  
