add-blog page added

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,7 +24,7 @@
   </div>
   <div class="container">
     <!-- <button mat-stroked-button type="submit">Log In</button> -->
-    <a mat-raised-button href="/task-list">Log In</a>
+    <a mat-raised-button href="/home">Log In</a>
 </div>
 <div>
     <br>
