Category added and design

--- a/src/app/blog-details/blog-details.component.html
+++ b/src/app/blog-details/blog-details.component.html
@@ -5,8 +5,9 @@
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>{{blog.title}}</mat-card-title>
       <mat-card-subtitle>{{blog.userName}}</mat-card-subtitle>
+      <mat-card-subtitle>{{blog.category}}</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+    <img mat-card-image src="https://mtysquared.co.za/wp-content/uploads/whatisblog.png" style="justify-content: center;">
     <mat-card-content>
       <p>
         {{blog.description}}
