--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,5 @@
 :host {
-    .all-tasks {
+    .all-blogs {
       display: flex;
       flex-direction: column;
       gap: 16px;
@@ -13,7 +13,7 @@
       padding-top: 20px;
   }
   .bg{
-    background-color: antiquewhite;
+    //background-color: rgba(176, 247, 223, 0.897);
     height: 100%;
   }
   
