--- a/src/app/add-blog/add-blog.component.html
+++ b/src/app/add-blog/add-blog.component.html
@@ -1,10 +1,10 @@
 <div class="bg">
     <div class="container">
-      <a mat-raised-button color="accent" href="/add-blog">Add Blog</a>
-      <a mat-raised-button color="accent" href="/home">Blog List</a>
+      <a mat-raised-button style="margin-right: 25px" href="/add-blog">Add Blog</a>
+      <a mat-raised-button href="/home">Blog List</a>
     </div>
     <div class="input">
-      <form class="task-form" [formGroup]="blogForm" (ngSubmit)="addBlog()">
+      <form class="blog-form" [formGroup]="blogForm" (ngSubmit)="addBlog()">
       <mat-form-field>
         <mat-label>Blog Title</mat-label>
         <input matInput type="text" formControlName="title" />
@@ -12,8 +12,7 @@
       <mat-form-field>
         <mat-label> User Name </mat-label>
         <input matInput type="text" formControlName="userName" />
-      </mat-form-field>
-      
+      </mat-form-field>    
       <mat-form-field>
         <mat-label>Blog Description</mat-label>
         <textarea matInput type="text" formControlName="description"> </textarea>
@@ -26,8 +25,9 @@
           }
         </mat-select>
       </mat-form-field>
-    
+      <div class="button">
       <button type="submit">Submit</button>
+      </div>
     </form>
     </div>
   
