--- a/src/app/add-blog/add-blog.component.scss
+++ b/src/app/add-blog/add-blog.component.scss
@@ -1,22 +1,24 @@
 :host {
-    .task-form {
-      margin-inline: 100px;
-      margin-block: 32px;
+    .blog-form {
+      margin-inline: 500px;
+      margin-block: 40px;
       display: flex;
       flex-direction: column;
-      gap: 16px;
-      width: min(100%, 300px);
+      gap: 10px;
+      width: min(100%, 700px);
     }
     .toggle-group {
       max-width: min-content;
     }
   .container{
+    
     display: flex;
     justify-content: center;
-    padding: 20px;
+    padding: 40px;
+    
   }
   .bg{
-    background-color: antiquewhite;
+    background-color: rgba(176, 247, 223, 0.897);
     height: 100%;
   }
   .input {
@@ -25,5 +27,31 @@
     display: flex;
     justify-content: center;
   }
-  
+  .button {
+  background-color: #1e492e;
+  border-radius: 100px;
+  box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
+  color: green;
+  cursor: pointer;
+  display: inline-block;
+  font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
+  padding: 7px 20px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 250ms;
+  border: 0;
+  font-size: 16px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;  
   }
+  .button:hover {
+    box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
+    transform: scale(1.05) rotate(-1deg);
+  }
+
+  }
+
+
+
+  
