--- a/src/app/add-blog/add-blog.component.html
+++ b/src/app/add-blog/add-blog.component.html
@@ -1,7 +1,8 @@
 <div class="bg">
     <div class="container">
-      <a mat-raised-button style="margin-right: 25px" href="/add-blog">Add Blog</a>
-      <a mat-raised-button href="/home">Blog List</a>
+      <a mat-raised-button style="margin-right: 25px" routerLink="/add-blog">Add Blog</a>
+      <a mat-raised-button style="margin-right: 25px" routerLink="/home">Blog List</a>
+      <a mat-raised-button routerLink="/login">Log Out</a>
     </div>
     <div class="input">
       <form class="blog-form" [formGroup]="blogForm" (ngSubmit)="addBlog()">
