--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,8 @@
 <div>
     <div class="container">
-      <a mat-raised-button style="margin-right: 25px" href="/add-blog">Add Blog</a>
-      <a mat-raised-button href="/home">Blog List</a>
+      <a mat-raised-button style="margin-right: 25px" routerLink="/add-blog">Add Blog</a>
+      <a mat-raised-button style="margin-right: 25px" routerLink="/home">Blog List</a>
+      <a mat-raised-button routerLink="/login">Log Out</a>
     </div>
     <div class="all-blogs">
       @for(blog of allBlogs; track $index){
