--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -27,7 +27,7 @@
     </div>
     <div class="container">
         <!-- <button mat-stroked-button type="submit">Log In</button> -->
-        <a mat-raised-button href="/home">Sign Up</a>
+        <a mat-raised-button routerLink="/home">Sign Up</a>
     </div>
     
     </div>
