--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,6 +40,7 @@ $blog_practice-theme: mat.define-light-theme((
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 body {
+  //background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(img/bg.jpg);
   background-color: rgba(176, 247, 223, 0.897);/* Adjust the path to your image */
   background-size: cover; /* This ensures the image covers the entire background */
   background-repeat: no-repeat; /* Prevent the image from repeating */
