--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -13,7 +13,7 @@
       padding-top: 20px;
   }
   .bg{
-    //background-color: rgba(176, 247, 223, 0.897);
+    background-color: rgba(176, 247, 223, 0.897);
     height: 100%;
   }
   
