--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div>
+    <div class="bg">
         <div class="container">
             <h2 class="container">
                 Don't have an account?
@@ -25,7 +25,7 @@
     <input matInput placeholder="Password" value="">
   </mat-form-field>
     </div>
-    <div class="container">
+    <div class="btn">
         <!-- <button mat-stroked-button type="submit">Log In</button> -->
         <a mat-raised-button routerLink="/home">Sign Up</a>
     </div>
