--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -3,5 +3,19 @@
         display: flex;
         justify-content: center;
     }
+    .bg{
+        background-color: rgba(176, 247, 223, 0.897);
+        display: center;
+        margin-top: 7%;
+        width: 30%;
+        opacity: 90%;
+
+    }
+    .btn{
+        margin-bottom: 10%;
+        display: flex;
+        justify-content: center;
+    }
+    
     
     }
