--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -4,5 +4,14 @@
         justify-content: center;
       
     }
+    .bg{
+        background-color: rgba(176, 247, 223, 0.897);
+        display: center;
+        margin-top: 7%;
+        width: 30%;
+        opacity: 90%;
+
+
+    }
     
     }
