delete and user interface done

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -8,28 +8,22 @@
             </h2>
         </div>
     <div class="container">
-<mat-form-field class="example-full-width">
-    <mat-label>Email</mat-label>
-    <input matInput placeholder="Email" value="">
-  </mat-form-field>
-    </div>
-    <div class="container">
-  <mat-form-field class="example-full-width">
-    <mat-label>Password</mat-label>
-    <input matInput placeholder="Password" value="">
-  </mat-form-field>
-    </div>
-    <div class="container">
-  <mat-form-field class="example-full-width">
-    <mat-label>Confirm Password</mat-label>
-    <input matInput placeholder="Password" value="">
-  </mat-form-field>
-    </div>
-    <div class="btn">
-        <!-- <button mat-stroked-button type="submit">Log In</button> -->
-        <a mat-raised-button routerLink="/home">Sign Up</a>
-    </div>
-    
-    </div>
+      <form class="blog-form" [formGroup]="userForm" (ngSubmit)="addUser()">
+        <mat-form-field>
+          <mat-label>User Name</mat-label>
+          <input matInput type="text" formControlName="userName" />
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label> Email</mat-label>
+          <input matInput type="text" formControlName="email" />
+        </mat-form-field>    
+        <mat-form-field>
+          <mat-label>Password</mat-label>
+          <input matInput type="text" formControlName="password" /> 
+        </mat-form-field>
+        <div class="button">
+        <button type="submit">Submit</button>
+        </div>
+      </form>
 </div>
   
