--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -26,4 +26,10 @@
         </div>
       </form>
 </div>
-  
+
+<P class="containersignup">
+  Have an account?  <a style="margin-right:5px; margin-left:5px" (click)="navigeteTo('login')"> <u>Log In</u></a> here
+</P>
+
+</div>
+  </div>
