--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -24,6 +24,16 @@
         gap: 10px;
         width: min(100%, 700px);
       }
+      .containersignup{
+        background-color: white;
+        //width: 80%;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 10%;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+
     
     
     }
