--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,27 +11,25 @@
     </h2>
 </div>
 <div class="container">
-<mat-form-field class="example-full-width">
-    <mat-label>Email</mat-label>
-    <input matInput placeholder="Email" value="">
-  </mat-form-field>
+  <form class="blog-form" [formGroup]="loginForm" (ngSubmit)="login()">
+    <mat-form-field>
+      <mat-label> Email</mat-label>
+      <input matInput type="text" formControlName="email" />
+    </mat-form-field>    
+    <mat-form-field>
+      <mat-label>Password</mat-label>
+      <input matInput type="text" formControlName="password" /> 
+    </mat-form-field>
+    <div class="button">
+    <button type="submit">Log In</button>
+    </div>
+  </form>
 </div>
-<div class="container"> 
-  <mat-form-field class="example-full-width">
-    <mat-label>Password</mat-label>
-    <input matInput placeholder="Password" value="">
-  </mat-form-field>
-  </div>
-  <div class="container">
-    <!-- <button mat-stroked-button type="submit">Log In</button> -->
-    <a mat-raised-button routerLink="/home">Log In</a>
-</div>
-<div>
-    <br>
-</div>
-<P class="container">
-    Don't Have an account?  <a href="/signup"> SignUp</a> here
+
+<P class="containersignup">
+    Don't Have an account?  <a style="margin-right:5px; margin-left:5px" (click)="navigeteTo('signup')"> <u>Sign Up</u></a> here
 </P>
+
   </div>
 </div>
 
